testing/errors/valuenotdefined4.a
	* = $200
	!by @cheap_local	; -> "Value not defined."
